reuse translations: community (wip)

--- a/i18n/es/docusaurus-plugin-content-docs/current/05.community/10.chat_rooms.md
+++ b/i18n/es/docusaurus-plugin-content-docs/current/05.community/10.chat_rooms.md
@@ -1,50 +1,46 @@
 ---
-title: Chat rooms
+title: Salas de chat
 ---
 
-Among other communication tools, YunoHost project use chat rooms to communicate.
+El proyecto YunoHost utiliza salas de chat como medio de communicación.
 
-You could join those chat rooms using:
+Puede unirse a una sala de chat utilizando :
 
-- a [Matrix client](https://matrix.org/ecosystem/clients/)
-- a [XMPP client](https://en.wikipedia.org/wiki/Comparison_of_instant_messaging_clients)
-- an [IRC Client](https://en.wikipedia.org/wiki/Comparison_of_Internet_Relay_Chat_clients) for example [KiwiIRC](https://web.libera.chat/#yunohost) (please note that the IRC room is deprecated, prefer Matrix)
+- un [cliente Matrix](https://matrix.org/ecosystem/clients/)
+- un [cliente XMPP](https://es.wikipedia.org/wiki/Anexo:Comparaci%C3%B3n_de_clientes_de_mensajer%C3%ADa_instant%C3%A1nea)
+- un [cliente IRC](https://es.wikipedia.org/wiki/Anexo:Clientes_IRC) por ejemplo [KiwiIRC](https://web.libera.chat/#yunohost) (please note that the IRC room is deprecated, prefer Matrix)
 
-**NB: Currently, the IRC bridge ([due to Matrix](https://libera.chat/guides/faq#are-bridges-allowed)) is disabled. So while the XMPP and Matrix are bridged, the IRC channel is not.**
+#### Sala de chat de ayuda y soporte
 
-#### Help and support chat room
+Existen salas publicas de chat de [soporte](/community/help) y ayuda para YunoHost:
 
-There is a [support](/community/help) chat room for YunoHost users mutual support and help.
-
-- Matrix: **[`#yunohost:matrix.org`](https://matrix.to/#/#yunohost:matrix.org)**
+- Matrix: **[`#yunohost:matrix.org`](https://matrix.to/#/#yunohost:matrix.org)** ;
 - XMPP: **[`support@conference.yunohost.org`](xmpp:support@conference.yunohost.org?join)**
-- IRC: **`#yunohost`** on libera.chat
+- IRC: **`#yunohost`** on libera.chat ;
 
-#### Development chat room
+#### sala de chat para desarrolladores
 
-YunoHost core development chat room:
+Salas de chat para el desarollo de YunoHost:
 
-- Matrix: **[`#yunohost-dev:matrix.org`](https://matrix.to/#/#yunohost-dev:matrix.org)**
+- Matrix: **#[`yunohost-dev:matrix.org`](https://matrix.to/#/#yunohost-dev:libera.chat)** ;
 - XMPP: **[`dev@conference.yunohost.org`](xmpp:dev@conference.yunohost.org?join)**
-- IRC: **`#yunohost-dev`** on libera.chat
+- IRC: **`#yunohost-dev`** on libera.chat ;
 
-Currently, the main chat room for contributions on YunoHost project.
-For help, please see **`#yunohost`** chat room above.
+Actualmente, la sala principal de chat para contribuciones en YunoHost
+Para mas ayuda, vea la sala de chat **`#yunohost`** encima.
 
-#### Applications chat room
+#### Sala de chat para las integración de aplicaciones
 
-Application packaging development chat room. It allow packagers to help each other.
-It also allow to discuss packaging evolution, continuous integration tools:
+Estos permite la ayuda mutua para los integradores de aplicaciones y también para conversar de evoluciones et de herramientas de integración continua.
 
 - Matrix: **[`#yunohost-apps:matrix.org`](https://matrix.to/#/#yunohost-apps:matrix.org)**
 - XMPP: **[`apps@conference.yunohost.org`](xmpp:apps@conference.yunohost.org?join)**
-- IRC: **`#yunohost-apps`** on libera.chat
+- IRC: **`#yunohost-apps`** en libera.chat
 
-#### Documentation chat room
+#### Sala de chat de Documentación
 
-YunoHost project documentation chat room. It allow people to discuss, synchronize and maintain
-an up-to-date documentation on the differents aspects of the project (backend, frontend, apps, project, community...).
-You may also share here your public communications about YunoHost (videos, presentations, etc.), to allow proper referencing.
+Lugar donde la comunidad conversa sincroniza y mantiene actualisado la documentación en los aspectos varios como (backend, frontend, apps, proyecto, comunidad...)
+Puede tambien compartir sus materiales sobre YunoHost (videos, presentaciones, etc.).
 
 - Matrix: **[`#yunohost-doc:matrix.org`](https://matrix.to/#/#yunohost-doc:matrix.org)**
 - XMPP: **[`doc@conference.yunohost.org`](xmpp:doc@conference.yunohost.org?join)**
