--- a/i18n/fr/docusaurus-plugin-content-docs/current/05.community/10.chat_rooms.md
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/05.community/10.chat_rooms.md
@@ -1,51 +1,50 @@
 ---
-title: Chat rooms
+title: Salons de discussions
 ---
 
-Among other communication tools, YunoHost project use chat rooms to communicate.
+Parmi d’autres outils, le projet YunoHost se sert de salons de discussions pour communiquer.
 
-You could join those chat rooms using:
+Vous pouvez rejoindre ces salons avec :
 
-- a [Matrix client](https://matrix.org/ecosystem/clients/)
-- a [XMPP client](https://en.wikipedia.org/wiki/Comparison_of_instant_messaging_clients)
-- an [IRC Client](https://en.wikipedia.org/wiki/Comparison_of_Internet_Relay_Chat_clients) for example [KiwiIRC](https://web.libera.chat/#yunohost) (please note that the IRC room is deprecated, prefer Matrix)
+- un [Client Matrix](https://matrix.org/ecosystem/clients/)
+- un [Client XMPP](https://fr.wikipedia.org/wiki/Clients_XMPP)
+- un [Client IRC](https://fr.wikipedia.org/wiki/Liste_de_clients_IRC) par exemple [KiwiIRC](https://web.libera.chat/#yunohost) (attention, le salon IRC est déprécié, préférez Matrix)
 
 **NB: Currently, the IRC bridge ([due to Matrix](https://libera.chat/guides/faq#are-bridges-allowed)) is disabled. So while the XMPP and Matrix are bridged, the IRC channel is not.**
 
-#### Help and support chat room
+#### Salon d'entraide et de support
 
-There is a [support](/community/help) chat room for YunoHost users mutual support and help.
+Le salon d’[entraide](/community/help) est là pour permettre aux utilisateurs de YunoHost de s'aider mutuellement.
 
-- Matrix: **[`#yunohost:matrix.org`](https://matrix.to/#/#yunohost:matrix.org)**
-- XMPP: **[`support@conference.yunohost.org`](xmpp:support@conference.yunohost.org?join)**
-- IRC: **`#yunohost`** on libera.chat
+- Matrix : **[`#yunohost:matrix.org`](https://matrix.to/#/#yunohost:matrix.org)**
+- XMPP : **[`support@conference.yunohost.org`](xmpp:support@conference.yunohost.org?join)**
+- IRC : **`#yunohost`** sur libera.chat (voir KiwiIRC ci-dessus) (attention, le salon IRC est déprécié, préférez Matrix)
 
-#### Development chat room
+#### Développement
 
-YunoHost core development chat room:
+Salon de développement du cœur de YunoHost :
 
-- Matrix: **[`#yunohost-dev:matrix.org`](https://matrix.to/#/#yunohost-dev:matrix.org)**
-- XMPP: **[`dev@conference.yunohost.org`](xmpp:dev@conference.yunohost.org?join)**
-- IRC: **`#yunohost-dev`** on libera.chat
+- Matrix : **[`#yunohost-dev:matrix.org`](https://matrix.to/#/#yunohost-dev:matrix.org)**
+- XMPP : **[`dev@conference.yunohost.org`](xmpp:dev@conference.yunohost.org?join)**
+- IRC : **`#yunohost-dev`** sur libera.chat (attention, le salon IRC est déprécié, préférez Matrix)
 
-Currently, the main chat room for contributions on YunoHost project.
-For help, please see **`#yunohost`** chat room above.
+C'est le salon principal pour les contributions autour du projet.
+Pour chercher de l’aide, merci d'aller sur le salon d’entraide ci-dessus.
 
-#### Applications chat room
+#### Applications
 
-Application packaging development chat room. It allow packagers to help each other.
-It also allow to discuss packaging evolution, continuous integration tools:
+Salon de développement du packaging d’application. Il permet aux packageurs de s’entraider.
+Il sert également à discuter de l’évolution du packaging, des outils d’intégration continue sur les applications.
 
-- Matrix: **[`#yunohost-apps:matrix.org`](https://matrix.to/#/#yunohost-apps:matrix.org)**
-- XMPP: **[`apps@conference.yunohost.org`](xmpp:apps@conference.yunohost.org?join)**
-- IRC: **`#yunohost-apps`** on libera.chat
+- Matrix : **[`#yunohost-apps:matrix.org`](https://matrix.to/#/#yunohost-apps:matrix.org)**
+- XMPP : **[`apps@conference.yunohost.org`](xmpp:apps@conference.yunohost.org?join)**
+- IRC : **`#yunohost-apps`** sur libera.chat (attention, le salon IRC est déprécié, préférez Matrix)
 
-#### Documentation chat room
+#### Documentation
 
-YunoHost project documentation chat room. It allow people to discuss, synchronize and maintain
-an up-to-date documentation on the differents aspects of the project (backend, frontend, apps, project, community...).
-You may also share here your public communications about YunoHost (videos, presentations, etc.), to allow proper referencing.
+Le salon de documentation du projet YunoHost. Il permet aux contributeurs d'échanger, pour synchroniser et maintenir une documentation à jour sur les différents aspects du projet : backend, frontend, apps, projet, communauté...
+Vous pouvez aussi y partager vos communications au public à propos de YunoHost (présentations, vidéos...) pour permettre leur référencement dans la documentation.
 
-- Matrix: **[`#yunohost-doc:matrix.org`](https://matrix.to/#/#yunohost-doc:matrix.org)**
-- XMPP: **[`doc@conference.yunohost.org`](xmpp:doc@conference.yunohost.org?join)**
-- IRC: **`#yunohost-doc`** on libera.chat
+- Matrix : **[`#yunohost-doc:matrix.org`](https://matrix.to/#/#yunohost-doc:matrix.org)**
+- XMPP : **[`doc@conference.yunohost.org`](xmpp:doc@conference.yunohost.org?join)**
+- IRC : **`#yunohost-doc`** sur libera.chat (attention, le salon IRC est déprécié, préférez Matrix)
