--- a/i18n/it/docusaurus-plugin-content-docs/current/05.community/10.chat_rooms.md
+++ b/i18n/it/docusaurus-plugin-content-docs/current/05.community/10.chat_rooms.md
@@ -1,50 +1,50 @@
 ---
-title: Chat rooms
+title: Chat di aiuto
 ---
 
-Among other communication tools, YunoHost project use chat rooms to communicate.
+Il progetto YunoHost si avvale, oltre ad altri strumenti, delle chat di aiuto.
 
-You could join those chat rooms using:
+Potete accedere alle chat utilizzando:
 
-- a [Matrix client](https://matrix.org/ecosystem/clients/)
-- a [XMPP client](https://en.wikipedia.org/wiki/Comparison_of_instant_messaging_clients)
-- an [IRC Client](https://en.wikipedia.org/wiki/Comparison_of_Internet_Relay_Chat_clients) for example [KiwiIRC](https://web.libera.chat/#yunohost) (please note that the IRC room is deprecated, prefer Matrix)
+- un [Client Matrix](https://matrix.org/ecosystem/clients/)
+- un [Client XMPP](https://en.wikipedia.org/wiki/Comparison_of_instant_messaging_clients)
+- un [Client IRC](https://en.wikipedia.org/wiki/Comparison_of_Internet_Relay_Chat_clients) come ad esempio [KiwiIRC](https://web.libera.chat/#yunohost) (notate però che la stanza IRC è ormai deprecata, è preferibile usare matrix)
 
-**NB: Currently, the IRC bridge ([due to Matrix](https://libera.chat/guides/faq#are-bridges-allowed)) is disabled. So while the XMPP and Matrix are bridged, the IRC channel is not.**
+**NB. Al momento il bridge con IRC non è attivo ([a causa di matrix](https://libera.chat/guides/faq#are-bridges-allowed)). Nel frattempo XMPP e matrix hanno il bridge ma non IRC**
 
-#### Help and support chat room
+#### Chat di aiuto e supporto
 
-There is a [support](/community/help) chat room for YunoHost users mutual support and help.
+La chat permette agli utenti YunoHost di ottenere/offrire reciproco [aiuto](/community/help).
 
-- Matrix: **[`#yunohost:matrix.org`](https://matrix.to/#/#yunohost:matrix.org)**
-- XMPP: **[`support@conference.yunohost.org`](xmpp:support@conference.yunohost.org?join)**
-- IRC: **`#yunohost`** on libera.chat
+- Matrix : **[`#yunohost:matrix.org`](https://matrix.to/#/#yunohost:matrix.org)**
+- XMPP : **[`support@conference.yunohost.org`](xmpp:support@conference.yunohost.org?join)**
+- IRC : **`#yunohost`** su libera.chat
 
-#### Development chat room
+#### Chat di aiuto e supporto per sviluppatori
 
-YunoHost core development chat room:
+Chat per gli sviluppatori di YunoHost:
 
 - Matrix: **[`#yunohost-dev:matrix.org`](https://matrix.to/#/#yunohost-dev:matrix.org)**
 - XMPP: **[`dev@conference.yunohost.org`](xmpp:dev@conference.yunohost.org?join)**
-- IRC: **`#yunohost-dev`** on libera.chat
+- IRC: **`#yunohost-dev`** su libera.chat
 
-Currently, the main chat room for contributions on YunoHost project.
-For help, please see **`#yunohost`** chat room above.
+La chat per chi contribuisce allo sviluppo del progetto.
+Per richieste di aiuto generiche utilizzate il canale **`#yunohost`** citati nel paragrafo precedente.
 
-#### Applications chat room
+#### Applicazioni
 
-Application packaging development chat room. It allow packagers to help each other.
-It also allow to discuss packaging evolution, continuous integration tools:
+Chat di sviluppo dei packaging dei programmi.
+Permette di ricevere/inviare aiuto sul packaging, sull'evoluzione degli strumenti di integrazione dei programmi:
 
 - Matrix: **[`#yunohost-apps:matrix.org`](https://matrix.to/#/#yunohost-apps:matrix.org)**
 - XMPP: **[`apps@conference.yunohost.org`](xmpp:apps@conference.yunohost.org?join)**
-- IRC: **`#yunohost-apps`** on libera.chat
+- IRC: **`#yunohost-apps`** su libera.chat
 
-#### Documentation chat room
+#### Documentazione
 
-YunoHost project documentation chat room. It allow people to discuss, synchronize and maintain
-an up-to-date documentation on the differents aspects of the project (backend, frontend, apps, project, community...).
-You may also share here your public communications about YunoHost (videos, presentations, etc.), to allow proper referencing.
+Chat della documentazione del progetto YunoHost.
+Permette agli utenti che contribuiscono alla documentazione di confrontarsi, sincronizzare e aggiornare la documentazione sulle diverse parti del progetto: backend e frontend, applicazioni, progetto, comunità...
+Potete condividere presentazioni e video di divulgazione al pubblico di YunoHost, affinché vengano inseriti nella documentazione.
 
 - Matrix: **[`#yunohost-doc:matrix.org`](https://matrix.to/#/#yunohost-doc:matrix.org)**
 - XMPP: **[`doc@conference.yunohost.org`](xmpp:doc@conference.yunohost.org?join)**
