--- a/i18n/it/docusaurus-plugin-content-docs/current/05.community/12.asking_for_help_efficiently.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/05.community/12.asking_for_help_efficiently.mdx
@@ -40,7 +40,7 @@ Avoid extracts from the logs, as decisive information may be elsewhere.
 Also, avoid copying and pasting them into the forum, as it's unpleasant to go through them like that, share the YunoPaste link.
 
 <center>
-![YunoPaste button](/img/yunopaste.png)
+![Bottone YunoPaste](/img/yunopaste.png)
 
 <ReactPlayer playing loop muted url='/img/yunopaste_install.mp4'
     alt='Video showing that the YunoPaste button can be found in the bottom right-hand side of log pages on web admin' />
@@ -54,31 +54,30 @@ Also, avoid copying and pasting them into the forum, as it's unpleasant to go th
 </center>
 
 
-If your issue is not related to an installation or upgrade process but instead is about an app failing load properly, ideally you can investigate with your browser console (opened with the F12 key): its Network tab can show you HTTP error codes (including the infamous 403, 404, 500...), and its Console can output errors too.
+Se  il vostro problema non è dovuto ad un processo di installazione o di aggiornamento, ma più probabilmente ad una app che non parte correttamente, potete iniziare ad indagare tramite la console del vostro browser (tasto F12): la scheda Rete riporterà i codici di errore HTTP (compresi e i ben noti 403, 404, 500...) e anche la Console riporterà gli errori.
 
-Screenshots are most welcome.
+Gli screenshot sono i benvenuti.
 
-## Don'ts
+## Da non fare assolutamente
 
-### Avoid the infamous [XY Problem](https://xyproblem.info/)
+### Evitate il terribile [problema XY](https://xyproblem.info/)
 
-In a nutshell, explain the root cause of your issue. You may share your attempted solution, but explaining ***why*** you need that potential solution is more important.
+In breve, spiegate quando si verifica il problema. Potete illustrare i tentativi intrapresi per risolverlo ma è importante spiegare ***perché*** avete bisogno di questa particolare soluzione.
+  
+### Non siate vaghi
 
-### Do not be vague
+Non date per scontato che le vostre spiegazioni siano comprese, non usate scorciatoie, non abbreviate, non semplificate. Non abbreviate i messaggi di errore.
 
-Do not assume we understand what you are talking about, do not take shortcuts, do not rephrase, do not simplify, do not trim the error messages.
+Non scrivete "non funziona", "non si installa", "non carica" e ["lo dice il computer"](https://en.wikipedia.org/wiki/Computer_says_no).
 
-Do not write "it does not work", "it does not want", "it does not load", ["computer says no"](https://en.wikipedia.org/wiki/Computer_says_no).
+Spiegate cosa non va e come l'errore si manifesta a schermo. C'è una differenza fondamentale, ad esempio, tra una pagina completamente bianca e una pagina completamente bianca con un codice di errore minimale.
 
-Explain what is wrong, and how it is displayed onscreen.  
-There is, for example, an important difference between a completely blank page and a blank page with a minimalistic error code.
+### Non "menate il can per l'aia"
 
-### Do not beat about the bush
+Non è necessario chiedere il permesso per chiedere aiuto. Trattandosi di una chat/forum di assistenza potete, ebbene sì, potete porre domande.
 
-No need to ask if you can ask. It is a support chat/forum, therefore yes, you can ask your question.
+Non fate domande come fosse un sondaggio, ad esempio "Qualcuno è riuscito a fare andare l'applicazione XY?" Se riscontrate dei problemi con un'applicazione spiegate direttamente il problema riscontrato, illustrate il contesto e condividete i log.
 
-Do not ask your question like a poll, as in "Did anyone managed to get app XY working?". If it is not working for you, then explain directly what issue you got, explain the context, share the logs.
+### Non rompete le p...e
 
-### Do not be an asshole
-
-Access to the forum or the chatrooms is a courtesy that can be revoked.
+La partecipazione al forum e alle chat è un privilegio che può essere rimosso.
