--- a/i18n/de/docusaurus-plugin-content-docs/current/05.community/20.faq.md
+++ b/i18n/de/docusaurus-plugin-content-docs/current/05.community/20.faq.md
@@ -1,68 +1,71 @@
 ---
-title: Frequently Asked Questions
+title: Häufig gestellte Fragen
 ---
 
-#### Under which license is YunoHost distributed?
+#### Unter welcher Lizenz wird YunoHost angeboten ?
 
-YunoHost packages are under free licenses GNU AGPL v.3.
+YunoHost steht unter der freien GNU AGPL v.3 Lizenz.
 
-YunoHost is based on Debian, so on Debian's components' licenses.
+YunoHost basiert auf Debian, also auch auf Lizenzen von Debian Bestandteilen.
 
-Applications and applications packages have their own licenses.
+Die Anwendungen und Applikations-Pakete stehen unter ihren jeweiligen, eigenen Lizenzen.
 
-#### What's YunoHost goal?
+#### Was ist das Ziel von YunoHost ?
 
-We believe that decentralizing the Internet, and empowering people to take control and responsibility back over their own data and services, is a crucial issue to guarantee a free and democratic society.
+Wir glauben, dass Dezentralisierung sowie Kontrolle und Verantwortung über die eigenen Daten und Dienste ein wichtiger Bestandteil einer freien und demokratischen Gesellschaft ist.
 
-The YunoHost project aims to democratize self-hosting.
+Das YunoHost Projekt zielt darauf ab, eigenverantwortliches Hosting zu demokratisieren.
 
-It provides a software that aims to make it easy for people to run and administer their own server, with minimal knowledge and required time.
+Wir bieten eine Software an, die es für jeden möglichst einfach machen soll, einen eigenen Server zu betreiben und zu verwalten - mit einem minimalen Aufwand an Wissen und Zeit.
 
-#### But what does YunoHost exactly *do*?
+#### Aber was *macht* YunoHost überhaupt ?
 
-YunoHost is a distribution, in the sense that it is a purpose-specific version of GNU/Linux-Debian and it distributes a set of application via its catalog, but it is also "just" a program that automatically configures Debian and does most of the hard work for you.
+YunoHost könnte eine Distribution oder ein Betriebssystem genannt werden, aber es ist eigentlich "nur" eine Ebene, die über Debian betrieben wird und welche die meiste, schwierige Arbeit für Sie übernimmt.
 
-For instance, if you wanted to install WordPress, you would need to type a bunch of commands to create some users, setup a web server, setup a SQL server, download the WordPress archive, uncompress it, configure the web server, configure the SQL database, and finally configure WordPress. YunoHost handles the technical details and "types all these commands for you", so that you can focus on what really matters.
+Zum Beispiel, wenn Sie Wordpress installieren möchten, müssten Sie einige Befehle eintippen, um Benutzer zu generieren, einen Webserver einrichten, einen SQL Server einrichten, das Wordpress Archiv herunterladen, entpacken, den Webserver konfigurieren, die SQL Datenbank konfigurieren und schließlich Wordpress einrichten. YunoHost übernimmt all das für Sie, zähmt das technische Chaos und "tippt alle Befehle für Sie", sodass Sie sich auf das konzentrieren können, was wirklich wichtig ist.
 
-More info on [this page](/overview/what_is_yunohost)!
+Mehr Informationen finden Sie [hier](/overview/what_is_yunohost) !
 
-#### Can I host my own personal website with YunoHost?
+#### Kann ich meine eigene, persönliche Internetseite mit YunoHost betreiben ?
 
-Yes! Have a look at the [Custom Web app](https://github.com/YunoHost-Apps/my_webapp_ynh). It provides an "empty shell" : after installing it, just upload your files (via SSH/SCP or SFTP) to the right location. You can have PHP and a SQL database if you need.
+Ja ! Werfen Sie einen Blick auf die [Custom Web app](https://github.com/YunoHost-Apps/my_webapp_ynh).
+Dort erhalten Sie ein "leeres Gefäß" : nach der Installation, laden Sie einfach Ihre Dateien and den jeweiligen Ort hoch (via SSH/SCP or SFTP). PHP und eine SQL Datenbank steht Ihnen bei Bedarf zur Verfügung.
 
-#### Can I host many independent websites with different domain names?
+#### Kann ich viele voneinander unabhängige Internetseiten mit unterschiedlichen Domain-Namen betreiben ?
 
-Yes! YunoHost is multi-user and multi-domain. Some applications like *WordPress* or *My webapp*, are multi-instances, which means that the application can be installed many times.
+Ja ! YunoHost ermöglicht das Anlegen mehrerer Benutzer und Domain-Namen. Manche Apllikationen wie *WordPress* oder *Web App Multi Custom* sind mehrinstanzenfähig und können mehrmals installiert werden.
 
-#### Why can't I access applications via the IP address?
+#### Wieso kann ich Anwendungen nicht über die IP-Adresse erreichen ?
 
-The [SSO](https://github.com/Kloadut/SSOwat/) (single sign-on) cannot properly authenticate users when they access your server with only its IP. If you really can't properly configure the DNS, you can temporarily work around it by [modifying the `hosts` file](/administer/tutorials/domains/dns_local_network#configure-hosts-file-on-client-workstation) on your computer.
+Die [SSO](https://github.com/Kloadut/SSOwat/) (Single Sign-on) Technik kann Benutzer nicht richtig authentifizieren, wenn sie auf den Server nur über die IP zugreifen. Wenn Sie keine Möglichkeit haben, die DNS korrekt zu konfigurieren, können Sie als temporäre Notlösung [die `Hosts` Datei (letztes §)](/administer/tutorials/domains/dns_local_network) auf Ihrem Computer modifizieren.
 
-#### What's YunoHost's business model?
+#### Was ist das Geschäftsmodell von YunoHost ?
 
-YunoHost is maintained by volunteers working on their free time. The project regularly receives donations which pay for the servers' bills and stickers. The project received (or continues to receive) grants from organization like [NLnet](https://nlnet.nl/) or [CodeLutin](https://www.codelutin.com/) to fund specific developments
+Momentan wird YunoHost nur von Freiwiligen betrieben, die in ihrer Freizeit an dem Projekt arbeiten. Im Grunde ist bisher kein Geld im Spiel (abgesehen von Serverkosten oder Stickern :P).
 
-Donations to the project are increasing, and we are in the process of defining the way we redistribute this money to main contributors and therefore help make the project sustainable. Additionally, some contributors do have professional activities based (at least partially) on YunoHost.
+Vor dem Hintergrund, dass einige Mitwirkende sehr viel zeit in das Projekt investieren, überlegen wir derzeit, wie wir das Projekt langfristig tragfähig machen können.
 
-#### Can I donate to the project?
+Dies könnte durch Spenden oder öffentliche Gelder erricht werden. Einige Mitwirkenden arbeiten an professionellen Angeboten in Zusammenhang mit YunoHost.
 
-Yes, you can! YunoHost needs money to pay servers and domain names. We would also like contributors to be able to spend more time contributing rather than looking for jobs.
+#### Kann ich für das Projekt spenden ?
 
-You can donate using [our donation interface](https://donate.yunohost.org)
+Ja, das können Sie ! YunoHost braucht Geld, um die Server und Domain-Namen zu bezahlen. Wir möchten außerdem erreichen, dass die Mitwirkenden weiterhin zum Projekt beitragen können und sich nicht nach anderen Jobs umschauen müssen.
 
-If you can, you can also make in-kind contributions, like servers (some of our infrastructure relies on servers from a few associations).
+Sie können [auf Liberapay spenden](https://liberapay.com/yunohost).
 
-#### How can I contribute to the project?
+Wenn Ihnen das möglich ist, können Sie auch gerne Sachspenden leisten (ein Teil unserer Infrastruktur ist auf Server von Dritten angewiesen).
 
-There are [many ways to contribute](/contribute) :).
+#### Wie kann ich zum Projekt beitragen ?
 
-Don't hesitate to come talk to us about your ideas!
+Es gibt viele Wege [zum Projekt beizutragen](/contribute) :).
 
-A common misconception for newcomers in free software projects is to think that they are "not skilled enough". In practice, nobody is "skilled" :). What really matter is: [liking what you do](https://www.youtube.com/watch?v=zIbR5TAz2xQ&t=113s), being friendly with other human beings, being patient and stubborn with machines, and having some free time. Other than that, just doing what you can is already awesome!
+Zögern Sie nicht, mit uns über Ihre Ideen zu sprechen!
 
-#### How is the YunoHost project organized?
+Es ist ein weit verbreitetes Missverständnis, dass Neulinge bei offenen Softwareprojekten nicht "ausreichend qualifiziert" sind. Wer ist das schon :) ? Was wirklich zählt, ist, [dass Sie mögen, was Sie tun](https://www.youtube.com/watch?v=zIbR5TAz2xQ&t=113s), nett zu anderen Menschen, geduldig und starrköpfig gegenüber Maschinen sind und etwas freie Zeit haben. Abgesehen davon ist einfach alles was Sie tun können, schon mehr als genug!
 
-It is described in [this document](https://github.com/YunoHost/project-organization/) :).
+#### Was sind YunoHost organisatorische Grundsätze ?
+
+Das beschreiben wir in [diesem Dokument](https://github.com/YunoHost/project-organization/) :).
 
 #### Will you port YunoHost to [insert favorite distro]?
 
