--- a/i18n/fr/docusaurus-plugin-content-docs/current/05.community/20.faq.md
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/05.community/20.faq.md
@@ -1,101 +1,102 @@
 ---
-title: Frequently Asked Questions
+title: Foire aux questions
 ---
 
-#### Under which license is YunoHost distributed?
+#### Sous quelle licence est distribué YunoHost ?
 
-YunoHost packages are under free licenses GNU AGPL v.3.
+Les paquets qui composent YunoHost sont sous licence libre GNU AGPL v.3.
 
-YunoHost is based on Debian, so on Debian's components' licenses.
+YunoHost est basé sur Debian, donc sur les licences des éléments sur lesquels Debian est basé.
 
-Applications and applications packages have their own licenses.
+Les applications et leurs paquets ont leurs licences respectives.
 
-#### What's YunoHost goal?
+#### Quel est l’objectif de YunoHost ?
 
-We believe that decentralizing the Internet, and empowering people to take control and responsibility back over their own data and services, is a crucial issue to guarantee a free and democratic society.
+Nous pensons que la décentralisation d’Internet, et la reprise du contrôle et de la responsabilité des données et services par les personnes est un enjeu crucial pour garantir une société libre et démocratique.
 
-The YunoHost project aims to democratize self-hosting.
+Le projet YunoHost cherche à démocratiser l’auto-hébergement.
 
-It provides a software that aims to make it easy for people to run and administer their own server, with minimal knowledge and required time.
+Nous fournissons un logiciel qui cherche à rendre simple le fait de gérer et d’administrer un serveur soi-même, en minimisant les compétences et le temps requis.
 
-#### But what does YunoHost exactly *do*?
+#### Mais qu’est-ce que ça fait *vraiment* ?
 
-YunoHost is a distribution, in the sense that it is a purpose-specific version of GNU/Linux-Debian and it distributes a set of application via its catalog, but it is also "just" a program that automatically configures Debian and does most of the hard work for you.
+YunoHost est à la fois une distribution, dans le sens où c'est une version de GNU/Linux-Debian dédié à un objectif précis et que YunoHost distribue un ensemble d'applications via son catalogue, mais c'est aussi un « simple » programme qui configure Debian de manière automatique, et gère les manipulations pénibles à votre place.
 
-For instance, if you wanted to install WordPress, you would need to type a bunch of commands to create some users, setup a web server, setup a SQL server, download the WordPress archive, uncompress it, configure the web server, configure the SQL database, and finally configure WordPress. YunoHost handles the technical details and "types all these commands for you", so that you can focus on what really matters.
+Par exemple, pour installer un WordPress à la main, il vous faudrait taper toute une série de commandes pour créer des utilisateurs, mettre en place un serveur web, mettre en place un serveur SQL, télécharger l’archive de WordPress, la décompresser, configurer le serveur web, configurer la base de données SQL, et finalement configurer WordPress. YunoHost gère toute cette partie technique et « tape les commandes à votre place », pour que vous puissiez vous concentrer sur ce qui compte vraiment.
 
-More info on [this page](/overview/what_is_yunohost)!
+Plus d’informations sur [cette page](/overview/what_is_yunohost) !
 
-#### Can I host my own personal website with YunoHost?
+#### Puis-je gérer mon propre site web avec YunoHost ?
 
-Yes! Have a look at the [Custom Web app](https://github.com/YunoHost-Apps/my_webapp_ynh). It provides an "empty shell" : after installing it, just upload your files (via SSH/SCP or SFTP) to the right location. You can have PHP and a SQL database if you need.
+Oui ! Il faut regarder du côté de [cette app](https://github.com/YunoHost-Apps/my_webapp_ynh).
+Elle fournit une « coquille vide » : après l’installation, il suffit d’envoyer vos fichiers (via SSH/SCP ou SFTP) au bon endroit. Il est aussi possible d’avoir du PHP et une base de donnée SQL si besoin.
 
-#### Can I host many independent websites with different domain names?
+#### Peut-on héberger plusieurs sites indépendants avec des noms de domaines différents ?
 
-Yes! YunoHost is multi-user and multi-domain. Some applications like *WordPress* or *My webapp*, are multi-instances, which means that the application can be installed many times.
+On peut tout à fait héberger plusieurs sites web car YunoHost est multi-domaine et que certaines applications de gestion de sites web, comme *WordPress* ou *My Webapp*, sont multi-instances, c’est-à-dire que l’application peut-être installée plusieurs fois.
 
-#### Why can't I access applications via the IP address?
+#### Pourquoi je ne peux pas accéder à mes applications avec l’adresse IP ?
 
-The [SSO](https://github.com/Kloadut/SSOwat/) (single sign-on) cannot properly authenticate users when they access your server with only its IP. If you really can't properly configure the DNS, you can temporarily work around it by [modifying the `hosts` file](/administer/tutorials/domains/dns_local_network#configure-hosts-file-on-client-workstation) on your computer.
+Pour des raisons techniques, le [SSO](https://github.com/YunoHost/SSOwat/) ne permet pas aux utilisateurs de se connecter à l’espace utilisateur lorsque l’on accède au serveur uniquement avec l’IP. Si vous ne pouvez réellement pas configurer un nom de domaine, une solution temporaire peut être de modifier le [fichier `hosts` (dernier §)](/administer/tutorials/domains/dns_local_network) de son ordinateur.
 
-#### What's YunoHost's business model?
+#### Quel est le modèle économique de YunoHost ?
 
-YunoHost is maintained by volunteers working on their free time. The project regularly receives donations which pay for the servers' bills and stickers. The project received (or continues to receive) grants from organization like [NLnet](https://nlnet.nl/) or [CodeLutin](https://www.codelutin.com/) to fund specific developments
+YunoHost est maintenu par une équipe de bénévoles travaillant pendant leur temps libre. Le projet reçoit régulièrement des dons qui financent principalement des frais de serveurs et de communication (stickers ;P). Le projet a reçu dans le passé (ou continue de recevoir) des subventions de la part d'organismes comme [NLnet](https://nlnet.nl/) ou [CodeLutin](https://www.codelutin.com/) pour financer des développements précis.
 
-Donations to the project are increasing, and we are in the process of defining the way we redistribute this money to main contributors and therefore help make the project sustainable. Additionally, some contributors do have professional activities based (at least partially) on YunoHost.
+Les dons au projet étant de plus en plus important, des initiatives sont en cours pour tenter de redistribuer l'argent aux contributeur·ice·s principales et ainsi aider à pérenniser le projet. Des contributeur·ice·s mènent par ailleurs des activités professionnelles basées partiellement sur YunoHost.
 
-#### Can I donate to the project?
+#### Puis-je faire un don au projet ?
 
-Yes, you can! YunoHost needs money to pay servers and domain names. We would also like contributors to be able to spend more time contributing rather than looking for jobs.
+Oui, c'est possible ! YunoHost a besoin de payer des serveurs et noms de domaine, et nous souhaitons permettre aux contributeur·ice·s de continuer à développer YunoHost plutôt que de chercher un emploi ailleurs.
 
-You can donate using [our donation interface](https://donate.yunohost.org)
+Pour faire un don ça se passe via [notre interface de don](https://donate.yunohost.org)
 
-If you can, you can also make in-kind contributions, like servers (some of our infrastructure relies on servers from a few associations).
+Si vous le pouvez, vous pouvez aussi faire des contributions en nature (une partie de notre infrastructure vient d'associations qui nous fournissent des serveurs).
 
-#### How can I contribute to the project?
+#### Comment puis-je contribuer au projet ?
 
-There are [many ways to contribute](/contribute) :).
+Il existe [plusieurs façons de contribuer](/contribute) :).
 
-Don't hesitate to come talk to us about your ideas!
+N’hésitez pas à venir nous parler de vos idées !
 
-A common misconception for newcomers in free software projects is to think that they are "not skilled enough". In practice, nobody is "skilled" :). What really matter is: [liking what you do](https://www.youtube.com/watch?v=zIbR5TAz2xQ&t=113s), being friendly with other human beings, being patient and stubborn with machines, and having some free time. Other than that, just doing what you can is already awesome!
+Le syndrome de l'imposteur (ne pas se sentir « assez compétent·e ») est assez répandu, mais en pratique, croyez-le, personne ne se sent compétent même 10 ans après sa première contrib' :). Ce qui compte vraiment est : [d’aimer ce que vous faites](https://www.youtube.com/watch?v=zIbR5TAz2xQ&t=113s), être sympathique avec les autres êtres humains du projet, être patient et têtu avec les machines, et avoir du temps libre. À part ça, juste faire ce que vous pouvez, c’est déjà trop cool !
 
-#### How is the YunoHost project organized?
+#### Quelle est l'organisation politique du projet YunoHost ?
 
-It is described in [this document](https://github.com/YunoHost/project-organization/) :).
+Elle est décrite dans [ce document](https://github.com/YunoHost/project-organization/) :).
 
-#### Will you port YunoHost to [insert favorite distro]?
+#### Pouvez-vous porter YunoHost sur [ma distro préférée] ?
 
-If you care about distrowars, or think 'Debian is dirty', then YunoHost is not for you.
+Si vous vous préoccupez des guéguerres de distro, ou pensez que « Debian c’est sale », vous n’êtes pas le public de YunoHost.
 
-YunoHost is aimed at non-tech people who just want their server to work. Debian has its flaws, but it's (one of?) the most widely known and used distribution for servers. It's stable. Most self-hosted software are one way or another compatible with Debian. It's easily hackable by anybody who's been doing a bit of CLI on their personal Ubuntu/Mint computer. There is no killer feature in other distributions that makes it relevant for YunoHost to switch or port to it.
+YunoHost vise un public de non-technophiles ou de bidouilleur·euse·s qui veulent simplement que « ça marche » sans devoir investir des semaines entières. Debian a probablement des défauts, mais c’est une (la ?) distribution la plus connue et utilisée pour gérer des serveurs. C’est une distribution stable. La plupart des services auto-hébergeables sont compatibles d’une manière ou d’une autre avec Debian. Elle est facilement bidouillable par quelqu’un qui a déjà utilisé la ligne de commande sur son ordinateur personnel. Il n’y a pas de « killer feature » particulière dans les autres distributions qui rendrait pertinent de porter YunoHost dessus.
 
-If this does not convince you, there are other projects running on other distributions or with different philosophies.
+Si cela ne vous convient pas, il existe d’autres projets sous d’autres distributions ou avec d’autres philosophies.
 
-#### I checked how apps packaging work. Why are you reinventing [insert favorite package format]?
+#### J’ai regardé comment le packaging des apps fonctionne. Pourquoi réinventez-vous [mon format de paquet préféré] ?
 
-People have been tempted to compare YunoHost packages to traditional package managers (such as Debian's `.deb`), which hold a different purpose. Traditional package managers are meant to install low-level purpose of installing files, commands, programs and services on the system. It is often your duty to configure them properly, simply because there is no standard server setup. Typically, web apps requires a lot of configuration because they rely on a web server and a database (and the single sign-on).
+Des personnes ont été tentées de comparer le système de packaging de YunoHost aux `.deb` de Debian. Pourtant, l’objectif des paquets d’application YunoHost est de celui des paquets traditionnels (comme les .deb de Debian) qui remplissent le rôle d’installer des éléments bas-niveau tels que des fichiers, commandes, programmes ou services sur le système. Il est à la charge de l’administrateur de les configurer ensuite proprement, simplement parce qu’il n’existe pas d’environnement standard. Typiquement, les applications web requièrent beaucoup de configuration car elles ont besoin de s’interfacer avec un serveur web et une base de données (et le système de connexion unique / SSO).
 
-YunoHost manages high-level abstractions (apps, domains, users...) and defines a standard setup (NGINX, Postfix, Metronome, SSOwat...) and, because of this, can handle the configuration for the user.
+YunoHost manipule des abstractions haut-niveau (apps, domaines, utilisateurs…) et définit un environnement standard (NGINX, Postfix, Metronome, SSOwat...) et, grâce à cela, peut gérer la configuration à la place de l’administrateur.
 
-#### When will [this feature] be implemented? Why isn't [that app] packaged yet? I cannot believe you do not do [this] yet!
+#### Quand est-ce que [cette fonctionnalité] sera ajoutée ? Pourquoi [cette app] n'a pas encore été packagée ? Je n'en reviens pas que vous ne fassiez pas encore [cela] !
 
-We do not give timelines.
+Nous ne donnons pas de calendrier.
 
-We are a bunch of volunteers working on our free time to maintain and develop YunoHost. We have no product owner or project manager handling resources, we are not a business. We do what we can, because we love this software, when we can.
+Nous sommes une poignée de volontaires travaillant sur notre temps libre pour maintenir et développer YunoHost. Nous n'avons pas de responsable produit ou de chef de projet, nous ne sommes pas une entreprise. Nous faisons ce que nous pouvons, parce que nous aimons ce logiciel, quand nous le pouvons.
 
-If you really want to have a feature implemented or documented, or an app packaged, [consider contributing yourself](/contribute)! We would love helping you get started.
+Si vous souhaitez vraiment voir une fonctionnalité codée ou documentée, ou une application packagée, [envisagez de contributer](/contribute)! Nous adorerions vous aider à vous mettre en selle.
 
-#### What is YunoHost's policy regarding the apps included in the official catalog ?
+#### Quelle est la politique d'inclusion des apps dans le catalogue officiel ?
 
-See [this page](/contribute/packaging_apps/policy)
+Voir [cette page](/contribute/packaging_apps/policy)
 
-#### Why won't you include [feature X] ?
+#### Pourquoi n'incluez-vous pas [fonctionnalité X] ?
 
-YunoHost is primarily designed for not-so-tech-savvy users and aims to remain relatively simple in terms of UI/UX. At the same time, the project has limited time and energy available to be maintained and developed. Therefore we may lower the priority of features, or refuse entirely the inclusion of features, based on the criteria that they:
+YunoHost est principalement conçu pour un public peu technicien et vise à rester relativement simple en termes d'UI/UX. En même temps, le projet dispose d'un temps et d'une énergie limités pour sa maintenance et son développement. C'est pourquoi nous pouvons réduire la priorité de certaines fonctionnalités, ou refuser complètement de les inclure, au titre des critères suivants :
 
-- would only be meaningful for advanced / power-users stuff which is out of the scope of the project ;
-- would introduce too much UI/UX bloat ;
-- would only cover unrealistic threat models ;
-- would be there only to satisfy purists ;
-- or overall would not be worth it in terms of development/maintenance time/energy for what it brings to the project.
+- ne seraient utiles qu'à des personnes expérimentées/avancées et vont au dela du périmètre visé par le projet ;
+- introduiraient trop de bloat dans l'UI/UX ;
+- ne couvriraient que des modèles de menace irréalistes ;
+- ne seraient là que pour satisfaire les puristes ;
+- ou globalement ne vaudrait pas la peine en termes de temps de développement/maintenance/énergie pour ce qu'elles apportent au projet.
