--- a/i18n/it/docusaurus-plugin-content-docs/current/05.community/20.faq.md
+++ b/i18n/it/docusaurus-plugin-content-docs/current/05.community/20.faq.md
@@ -1,101 +1,101 @@
 ---
-title: Frequently Asked Questions
+title: Domande frequenti
 ---
 
-#### Under which license is YunoHost distributed?
+#### Con quale licenza è rilasciato YunoHost?
 
-YunoHost packages are under free licenses GNU AGPL v.3.
+I pacchetti che si trovano in YunoHost sono rilasciati con licenza GNU AGPL v.3.
 
-YunoHost is based on Debian, so on Debian's components' licenses.
+YunoHost è basato sulla distribuzione Debian, quindi rispetta le licenze degli elementi sui quali Debian è costruito.
 
-Applications and applications packages have their own licenses.
+I programmi e i pacchetti hanno la loro propria licenza.
 
-#### What's YunoHost goal?
+#### Quale obbiettivo si prefigge YunoHost?
 
-We believe that decentralizing the Internet, and empowering people to take control and responsibility back over their own data and services, is a crucial issue to guarantee a free and democratic society.
+Siamo convinti che la decentralizzazione di Internet, e il riappropriarsi della responsabilità e del controllo dei nostri dati e servizi, sia una questione essenziale per garantire una società libera e democratica.
 
-The YunoHost project aims to democratize self-hosting.
+Il progetto YunoHost cerca di democratizzare il self hosting.
 
-It provides a software that aims to make it easy for people to run and administer their own server, with minimal knowledge and required time.
+Mettiamo a disposizione un software che facilita la gestione e l'amministrazione, in proprio, di un server, riducendo le competenze necessarie e il tempo richiesto.
 
-#### But what does YunoHost exactly *do*?
+#### In pratica cosa *fa* YunoHost?
 
-YunoHost is a distribution, in the sense that it is a purpose-specific version of GNU/Linux-Debian and it distributes a set of application via its catalog, but it is also "just" a program that automatically configures Debian and does most of the hard work for you.
+YunoHost è contemporaneamente una distribuzione, cioè una versione di GNU/Linux-Debian dedicata ad uno scopo preciso e arricchita da un insieme di applicazioni che YunoHost contempla nel suo catalogo, sia un "semplice" programma che configura Debian in maniera automatica e gestisce per voi le configurazioni più difficili.
 
-For instance, if you wanted to install WordPress, you would need to type a bunch of commands to create some users, setup a web server, setup a SQL server, download the WordPress archive, uncompress it, configure the web server, configure the SQL database, and finally configure WordPress. YunoHost handles the technical details and "types all these commands for you", so that you can focus on what really matters.
+Ad esempio, per installare una istanza WordPress manualmente si devono eseguire una serie complessa di comandi per creare gli utenti, installare un server web,  un server SQL, scaricare l'archivio di WordPress, decomprimerlo, configurare il sever web e il server SQL ed infine configurare WordPress. YunoHost effettua tutte queste operazioni al vostro posto, affinché possiate concentrarvi su cose più importanti.
 
-More info on [this page](/overview/what_is_yunohost)!
+Maggiori informazioni le potete trovare [qui](/overview/what_is_yunohost) !
 
-#### Can I host my own personal website with YunoHost?
+#### Posso ospitare un sito internet in YunoHost?
 
-Yes! Have a look at the [Custom Web app](https://github.com/YunoHost-Apps/my_webapp_ynh). It provides an "empty shell" : after installing it, just upload your files (via SSH/SCP or SFTP) to the right location. You can have PHP and a SQL database if you need.
+Certamente! [Qui](https://github.com/YunoHost-Apps/my_webapp_ynh). trovate tutto quello che vi serve. Questa applicazione fornisce un "contenitore vuoto": alla fine dell'installazione sarà sufficiente inviare i vostri file (via SSH/SCP o SFTP) alla destinazione corretta. Se necessario potrete usare codice PHP o un database SQL.
 
-#### Can I host many independent websites with different domain names?
+#### Posso ospitare più di un sito internet con nomi di dominio diversi?
 
-Yes! YunoHost is multi-user and multi-domain. Some applications like *WordPress* or *My webapp*, are multi-instances, which means that the application can be installed many times.
+Si è possibile ospitare più siti con domini diversi in quanto YunoHost accetta più nomi di dominio e alcuni programmi di gestione di siti web, come *Wordpress* o *My Webapp*, gestiscono più istanze, potendo quindi installarli più volte.
 
-#### Why can't I access applications via the IP address?
+#### Perché non posso accedere alle mie applicazioni con l'indirizzo  IP del server?
 
-The [SSO](https://github.com/Kloadut/SSOwat/) (single sign-on) cannot properly authenticate users when they access your server with only its IP. If you really can't properly configure the DNS, you can temporarily work around it by [modifying the `hosts` file](/administer/tutorials/domains/dns_local_network#configure-hosts-file-on-client-workstation) on your computer.
+Per motivi tecnici il [SSO](https://github.com/YunoHost/SSOwat/) (Single Sign On) non permette agli utilizzatori di connettersi alla propria dashboard quando si accede al server con il suo indirizzo IP. Se non potete configurare il DNS, una soluzione temporanea è quella di modificare il [file 'hosts' (ultimo §)](/administer/tutorials/domains/dns_local_network) del proprio computer.
 
-#### What's YunoHost's business model?
+#### Su quale modello economico si basa YunoHost ?
 
-YunoHost is maintained by volunteers working on their free time. The project regularly receives donations which pay for the servers' bills and stickers. The project received (or continues to receive) grants from organization like [NLnet](https://nlnet.nl/) or [CodeLutin](https://www.codelutin.com/) to fund specific developments
+YunoHost è sviluppato da una comunità di volontari durante il loro tempo libero. Il progetto riceve regolarmente donazioni che finanziano principalmente le spese per i server  e le spese di marketing (gli adesivi ;P). Il progetto ha ricevuto (o riceve attualmente) sovvenzioni da parte di organizzazioni quali [NLnet](https://nlnet.nl/) o [CodeLutin](https://www.codelutin.com/) al fine di finaziare lo sviluppo di parti ben definite.
 
-Donations to the project are increasing, and we are in the process of defining the way we redistribute this money to main contributors and therefore help make the project sustainable. Additionally, some contributors do have professional activities based (at least partially) on YunoHost.
+Le donazioni al progetto stanno aumentando e quindi sono allo studio delle iniziative per ridistribuire il ricavato ai principali sviluppatori, al fine di consolidare nel tempo il progetto. Inoltre alcuni sviluppatori svolgono parte della loro attività professionale avvalendosi di YunoHost.
 
-#### Can I donate to the project?
+#### Posso fare una donazione al progetto ?
 
-Yes, you can! YunoHost needs money to pay servers and domain names. We would also like contributors to be able to spend more time contributing rather than looking for jobs.
+Si è possibile! YunoHost paga server e nomi di dominio, e ci piacerebbe permettere ai nostri collaboratori/trici, di continuare a sviluppare YunoHost piuttosto di doversi cercare un altro lavoro.
 
-You can donate using [our donation interface](https://donate.yunohost.org)
+Potete donare tramite il [nostro portale per le donazioni](https://donate.yunohost.org)
 
-If you can, you can also make in-kind contributions, like servers (some of our infrastructure relies on servers from a few associations).
+Se potete, accettiamo anche contributi di diversa natura (una parte della nostra infrastruttura proviene da associazioni che ci forniscono alcuni server).
 
-#### How can I contribute to the project?
+#### Come posso contribuire al progetto ?
 
-There are [many ways to contribute](/contribute) :).
+Esistono [diversi modi per contribuire](/contribute) :).
 
-Don't hesitate to come talk to us about your ideas!
+Fateci conoscere le vostre idee!
 
-A common misconception for newcomers in free software projects is to think that they are "not skilled enough". In practice, nobody is "skilled" :). What really matter is: [liking what you do](https://www.youtube.com/watch?v=zIbR5TAz2xQ&t=113s), being friendly with other human beings, being patient and stubborn with machines, and having some free time. Other than that, just doing what you can is already awesome!
+Un malinteso comune per i nuovi arrivati nei progetti di software libero è quello di credere di "non essere abbastanza competenti". Nella realtà nessuno è "sufficientemente competente" :). Quello che veramente conta è: [piacere per quello che si fa](https://www.youtube.com/watch?v=zIbR5TAz2xQ&t=113s), essere empatici con le persone del progetto, essere pazienti e testardi con i computer, e avere tempo libero. Fare il possibile è già abbastanza!
 
-#### How is the YunoHost project organized?
+#### Quale è lo progetto politico di YunoHost ?
 
-It is described in [this document](https://github.com/YunoHost/project-organization/) :).
+È spiegato in [questo documento](https://github.com/YunoHost/project-organization/) :).
 
-#### Will you port YunoHost to [insert favorite distro]?
+#### Potete migrare YunoHost verso la mia [distro preferita] ?
 
-If you care about distrowars, or think 'Debian is dirty', then YunoHost is not for you.
+Se vi appassiona la guerriglia tra distribuzioni, o pensate che 'Debian fa schifo', YunoHost non fa per voi.
 
-YunoHost is aimed at non-tech people who just want their server to work. Debian has its flaws, but it's (one of?) the most widely known and used distribution for servers. It's stable. Most self-hosted software are one way or another compatible with Debian. It's easily hackable by anybody who's been doing a bit of CLI on their personal Ubuntu/Mint computer. There is no killer feature in other distributions that makes it relevant for YunoHost to switch or port to it.
+YunoHost è rivolto ad un pubblico di semplici appassionati, che desiderano semplicemente che tutto funzioni senza dover passare settimane a configurare un servizio. Debian ha dei difetti, ma è una tra (se non "la") le distribuzioni più conosciute e utilizzate per la gestione dei server. È stabile. La maggior parte dei servizi che si possono hostare sono in qualche modo compatibili con Debian. Debian è facilmente personalizzabile da chiunque abbia già utilizzato la linea di comando anche solo sul proprio pc. Nessuna altra distribuzione ha caratteristiche così uniche che renderebbero indispensabile la migrazione di YunoHost verso di essa.
 
-If this does not convince you, there are other projects running on other distributions or with different philosophies.
+Se questo non vi convince, esistono altri progetti basati su altre distribuzioni e altre filosofie.
 
-#### I checked how apps packaging work. Why are you reinventing [insert favorite package format]?
+#### Ho studiato come funziona il packaging delle app. Perché reinventate [il mio formato preferito dei pacchetti]?
 
-People have been tempted to compare YunoHost packages to traditional package managers (such as Debian's `.deb`), which hold a different purpose. Traditional package managers are meant to install low-level purpose of installing files, commands, programs and services on the system. It is often your duty to configure them properly, simply because there is no standard server setup. Typically, web apps requires a lot of configuration because they rely on a web server and a database (and the single sign-on).
+Qualcuno ha cercato di paragonare il sistema di packaging di YunoHost con altri (come ad esempio il `.deb` di Debian) nonostante abbiano scopi diversi. I sistemi di packaging tradizionali sono pensati per installare gli elementi di basso livello come i files, comandi, programmi o servizi sul sistema. Spesso è poi delegato a voi il compito di configurarli opportunamente, semplicemente perché non esiste un ambiente standard. Normalmente le applicazioni web richiedono un importante lavoro di configurazione in quanto hanno bisogno di interfacciarsi con un server web e un database (e l'interfaccia di connessione unica / SSO).
 
-YunoHost manages high-level abstractions (apps, domains, users...) and defines a standard setup (NGINX, Postfix, Metronome, SSOwat...) and, because of this, can handle the configuration for the user.
+YunoHost esegue delle astrazioni di alto livello (applicazioni, domini, utenti...) e configura un ambiente standard (NGINX, Metronome, SSOwat...) e, grazie a questo, può gestire la configurazione  invece che delegarla all'amministratore.
 
-#### When will [this feature] be implemented? Why isn't [that app] packaged yet? I cannot believe you do not do [this] yet!
+#### Quando implementerete [il programma che mi piacerebbe]? Perché [la mia app preferita] non è stata compilata? Trovo incredibile che non abbiate ancora implementato [la mia app preferita]!
 
-We do not give timelines.
+Noi non fissiamo un calendario.
 
-We are a bunch of volunteers working on our free time to maintain and develop YunoHost. We have no product owner or project manager handling resources, we are not a business. We do what we can, because we love this software, when we can.
+Siamo una manciata di volontari che impiegano il loro tempo libero per sviluppare e mantenere YunoHost. Non abbiamo un management, non siamo un'azienda, semplicemente facciamo quello che possiamo quando possiamo e per solo amore verso questo software.
 
-If you really want to have a feature implemented or documented, or an app packaged, [consider contributing yourself](/contribute)! We would love helping you get started.
+Se desiderate che la vostra app preferita sia implementata e documentata [aiutateci](/contribute)! Non vediamo l'ora di aiutarvi a mettervi al lavoro.
 
 #### What is YunoHost's policy regarding the apps included in the official catalog ?
 
 See [this page](/contribute/packaging_apps/policy)
 
-#### Why won't you include [feature X] ?
+#### Perché non includete la [caratteristica X]?
 
-YunoHost is primarily designed for not-so-tech-savvy users and aims to remain relatively simple in terms of UI/UX. At the same time, the project has limited time and energy available to be maintained and developed. Therefore we may lower the priority of features, or refuse entirely the inclusion of features, based on the criteria that they:
+YunoHost è pensata per utenti non particolarmente capaci tecnicamente e cerca di rimanere semplice nell'interfaccia. Allo stesso tempo, il progetto è tempi ed energie limitate per la manutenzione e lo sviluppo. Di conseguenza dobbiamo abbassare la priorità delle richieste di caratteristiche o anche di rifiutarle completamente basandosi sui seguenti criteri:
 
-- would only be meaningful for advanced / power-users stuff which is out of the scope of the project ;
-- would introduce too much UI/UX bloat ;
-- would only cover unrealistic threat models ;
-- would be there only to satisfy purists ;
-- or overall would not be worth it in terms of development/maintenance time/energy for what it brings to the project.
+- è utile solo per utenti avanzati, fuori dallo scopo del progetto;
+- introduce troppe complicazioni nell'interfaccia;
+- copre solo problemi poco realistici;
+- soddisfa solo necessità da puristi;
+- e soprattutto è troppo pesante in termini di sviluppo e manutenzione, tempo ed energia rispetto al guadagno del progetto.
