--- a/i18n/fr/docusaurus-plugin-content-docs/current/05.community/35.security_team.md
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/05.community/35.security_team.md
@@ -1,10 +1,11 @@
 ---
-title: Security team
+title: Équipe sécurité
 ---
 
-Contact the security team by mail: `security@yunohost.org`.
+Contactez l'équipe sécurité par email : `security@yunohost.org`.
 
-We strongly advise you to encrypt your mail with GPG. Our public key is available on key servers. Below is our fingerprint
+Nous vous recommandons fortement de chiffrer votre mail avec GPG. Notre clé
+publique est disponible sur les serveurs de clés. L'empreinte est ci-dessous :
 
 ```bash
 gpg --fingerprint security@yunohost.org
@@ -14,4 +15,4 @@ uid                  YunoHost Security <security@yunohost.org>
 sub   4096R/446838AF 2016-07-01
 ```
 
-See [a gist on Github](https://gist.github.com/opi/4496024dc3ff29ab2e068fd57092ab7c) for other trustable fingerprint sources.
+Voyez [a gist on Github](https://gist.github.com/opi/4496024dc3ff29ab2e068fd57092ab7c) pour d'autres empreintes de confiance
