--- a/i18n/fr/docusaurus-plugin-content-docs/current/05.community/35.project_budget.md
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/05.community/35.project_budget.md
@@ -1,34 +1,37 @@
 ---
-title: Project budget
+title: Budget du projet
 ---
 
-# Estimated budget for 2020/2021
+# Budget prévisionnel pour 2019/2020
 
-## Expected revenues
+## Revenus attendus
 
-- Donations: 3000€/year
-- Grant from NLNet: 20K€
+- Dons via Liberapay : 3000 €
+- Subvention de NLNet : 20K €
 
-## Expected expenses
+## Dépenses prévues
 
-- Development: 20K€
-- Server renting: 500€
-  - VPS Scaleway: 20.33*12: 243.96€/year
-  - VPS Digital O. (forum): 172.80€/year
-- Domain names: ~150€
-  - `nohost.me`: 11.99€HT/year
-  - `ynh.fr`: 6.99€HT/year (to be confirmed with frju?)
-  - `noho.st`: ~35€ TTC/year
-  - `yunohost.org`: 13.99€HT/year
-  - `yunohost.com`: 9.99€HT/year
-  - `labriqueinter.net`: 12.49€HT/year
-  - `internetcu.be`: 17.99€HT/year
-- Communication: ~400€
-- Travel (e.g. to go to conferences): ~700€
-  - AG FFDN 2020: 225€ (en tout)
-  - Event colibris: 150€
-  - FOSDEM ou autre conf: 300€
-- Bank account fees: 7x12€ => ~100€
-- Brique Camp: 500€
+- Developpement : 20K €
+- Location Serveur : ~500 €
+  - VPS Scaleway: 20.33*12: 243.96 €/year
+  - VPS Digital O. (forum): 172.80 €/year
+- Noms de domaine : ~150 €
+  - `nohost.me` : 11.99 €HT/ans
+  - `ynh.fr` : 6.99 €HT/ans (doit être confirmé avec frju ?)
+  - `noho.st` : ~35 €TTC/ans
+  - `yunohost.org` : 13.99 €HT/ans
+  - `yunohost.com` : 9.99 €HT/ans
+  - `labriqueinter.net` : 12.49 €Ht/ans
+  - `internetcu.be` : 17.99 €HT/ans
+- Communication : ~400 €
+  - Stickers : 100 €
+  - Tracts : 100 €
+  - T-shirt : 200 €
+- Déplacements (ex. : aller aux conférences) : ~700 €
+  - AG FFDN 2020 : 225 € (en tout)
+  - Event colibris : 150 €
+  - FOSDEM ou autre conf : 300 €
+- Compte bancaire fees : 7×12 € soit ~100 €
+- Brique Camp : 500 €
 
-**Balance 2020-2021**: +650€
+**Balance 2020-2021** : +650 €
